# python-demo

./: .gitignore  CLAUDE.md  DEMO.md  README.md  build-slides.js  package-lock.json  package.json  presentation.pptx  pyproject.toml
.claude/: settings.json
.claude/agents/: ba.md  business-analyst.md  python-developer.md
.claude/hooks/: hooks.json
.claude/hooks/scripts/: validate-branch.sh
.claude/skills/fairness-metrics/: SKILL.md
docs/design/: demographic-parity.md
docs/standards/: definition-of-done.md  definition-of-ready.md
src/fairness_checker/: __init__.py  cli.py  metrics.py  models.py
src/fairness_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli_demographic_parity.py  test_demographic_parity.py
workspace/slides/: slide01.html  slide02.html  slide03.html  slide04.html  slide05.html  slide06.html  slide07.html  slide08.html  slide09.html  slide10.html  slide11.html  slide12.html
