[project]
name = "fairness-checker"
version = "0.1.0"
description = "CLI tool for analyzing ML model predictions for bias"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "click>=8.1.0",
]

[project.scripts]
fairness-checker = "fairness_checker.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
